# ttsmagic

./: .gitignore  Cargo.toml  Makefile  README.md  default.nix  deploy.sh  shell.nix
.github/workflows/: test-and-deploy.yml  test-and-deploy_secrets.toml  test.yml
frontend/: elm.json
frontend/src/: DeckList.elm  DeckRendering.elm  Main.elm  WebSocketPorts.elm
nix/: add-secrets-to-docker-image.sh  app-source.nix  docker-image.nix  frontend.nix  nodejs-deps.nix  rust.nix  sources.json  ttsmagic.nix  wasm-bindgen.nix
schema/: 0001_initial.sql  0002_create_user_and_decks.sql
src/: deck.rs  files.rs  importer.rs  main.rs  migrations.rs  notify.rs  scryfall.rs  secrets.rs  test_helpers.rs  tts.rs  user.rs  utils.rs  web.rs
src/deck/: loaders.rs
src/scryfall/: api.rs
src/web/: app.rs  deck.rs  session.rs  steam.rs  ws.rs
static/: logged_in.html
ttsmagic-frontend/: Cargo.toml  build.sh
ttsmagic-frontend/src/: deck_list.rs  deck_renderer.rs  lib.rs  remote_resource.rs  ws.rs
ttsmagic-s3/: Cargo.toml
ttsmagic-s3/src/: lib.rs
ttsmagic-server/: Cargo.toml
ttsmagic-server/schema/: 0001_initial.sql  0003_deck_multiple_piles.sql  0004_fix_deck_entry_pk.sql  0005_case_insensitive_card_name_search.sql  0006_add_deck_created_at.sql
ttsmagic-server/src/: deck.rs  files.rs  importer.rs  main.rs  migrations.rs  notify.rs  scryfall.rs  secrets.rs  test_helpers.rs  tts.rs  user.rs  utils.rs  web.rs
ttsmagic-server/src/deck/: loaders.rs
ttsmagic-server/src/scryfall/: api.rs
ttsmagic-server/src/tts/: render_coordinator.rs
ttsmagic-server/src/utils/: async_par_stream.rs  sqlx.rs  surf_redirect_middleware.rs
ttsmagic-server/src/web/: app.rs  deck.rs  session.rs  steam.rs  uploaded_files.rs  ws.rs
ttsmagic-server/static/: index.js  logged_in.html  logged_out.html  package.json  stylesheet.css
ttsmagic-types/: Cargo.toml
ttsmagic-types/src/: deck.rs  frontend_to_server.rs  lib.rs  server_to_frontend.rs  user.rs
