[package]
name = "ttsmagic"
version = "0.1.0"
authors = ["Cassie Meharry <cassie@prophetessof.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = "2"
failure = "0.1"
failure_derive = "0.1"
http-client = "1"
indicatif = "0.14"
lazy_static = "1"
log = "0.4"
nonempty = "0.3"
pin-utils = "0.1.0-alpha.3"
pretty_env_logger = "0.4"
rand = "0.7"
# rayon = "*"
scraper = "0.11"
serde_json = "1"
smallvec = "1"
steam-auth = "1"
surf = "2.0.0-alpha.0"
tempfile = "3"
tide = "0.6"
url = "2"

[dependencies.async-std]
features = ["attributes"]
version = "^1.5"

[dependencies.image]
default-features = false
features = ["jpeg", "jpeg_rayon", "png"]
version = "^0.23"

[dependencies.rust-embed]
features = ["compression", "interpolate-folder-path"]
version = "5"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.sqlx]
default-features = false
features = ["chrono", "postgres", "runtime-async-std", "uuid"]
version = "0.2"

[dependencies.uuid]
features = ["v4"]
version = "0.8"

[profile.dev.package.image]
opt-level = 3
