[package]
name = "ttsmagic-frontend"
version = "0.1.0"
authors = ["Cassie Meharry <cassie@prophetessof.tech>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
console_log = "0.2"
js-sys = "0.3"
log = "0.4"
serde_json = "1"
wasm-bindgen = "=0.2.71"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.ttsmagic-types]
path = "../ttsmagic-types"

[dependencies.url]
features = ["serde"]
version = "2"

[dependencies.web-sys]
default-features = false
features = ["ErrorEvent", "Location", "WebSocket"]
version = "0.3"

[dependencies.yew]
features = ["web_sys"]
version = "0.17"
