[package]
name = "ttsmagic-s3"
version = "0.1.0"
authors = ["Cassie Meharry <cassie@prophetessof.tech>"]
edition = "2018"

[dependencies]
async-std = "1"
futures = "0.3"
log = "0.4"
mock-it = "0.3"
pretty_env_logger = "0.4"
surf = "2"
url = "2"

[dependencies.rusoto_signature]
default-features = false
version = "0.46"

[dev-dependencies]
pretty_assertions = "0.7"
