[package]
name = "ttsmagic-server"
version = "0.1.0"
authors = ["Cassie Meharry <cassie@prophetessof.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "0.5"
chrono = "0.4"
chrono-tz = "0.5"
clap = "2"
cookie = "*"
csv = "1"
dotenv = "0.15"
env_logger = "0.7"
failure = "0.1"
futures = "0.3"
futures_0_1 = { version = "0.1", package = "futures" }
hex = "0.4"
http_0_1 = { version = "0.1", package = "http" }
http_0_2 = { version = "0.2", package = "http" }
humantime = "1"
lazy_static = "1"
log = "0.4"
nonempty = "0.6"
pbr = "1"
percent-encoding = "1"
pin-utils = "0.1"
pretty_env_logger = "0.4"
rand = "0.7"
ring = "0.16"
scraper = "0.11"
serde_json = "1"
serde_qs = "*"
sha2 = "*"
smallvec = "1"
surf = "2"
tempfile = "3"
thiserror = "1"
tide = "^0.16"
time = "0.2"
toml = "0.5"
ttsmagic-s3 = { path= "../ttsmagic-s3" }
ttsmagic-types = { path = "../ttsmagic-types" }

[dependencies.async-std]
features = ["attributes"]
version = "1"

[dependencies.image]
default-features = false
features = ["jpeg", "jpeg_rayon", "png"]
version = "^0.23"

[dependencies.redis]
default-features = false
features = ["aio", "async-std-comp"]
git = "https://github.com/mitsuhiko/redis-rs"
rev = "1ea0bd0c2e7b450eb5279995142fd64e5db0fa69"

[dependencies.rust-embed]
features = ["compression", "interpolate-folder-path"]
version = "5"

[dependencies.sentry]
default-features = false
features = [
    "anyhow",
    "backtrace",
    "contexts",
    "curl",
    "log",
    "panic",
]
version = "0.19"

[dependencies.sentry-log]
features = ["env_logger"]
version = "0.19"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.sqlx]
default-features = false
features = ["chrono", "postgres", "runtime-async-std", "uuid"]
version = "0.2"

[dependencies.async-tungstenite]
features = ["async-std-runtime"]
version = "0.8"

[dependencies.url]
features = ["serde"]
version = "2"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8"

[dev-dependencies]
itertools = "0.9"
pretty_assertions = "*"
