[package]
name = "ttsmagic-types"
version = "0.1.0"
authors = ["Cassie Meharry <cassie@prophetessof.tech>"]
edition = "2018"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.sqlx]
default-features = false
features = ["macros", "postgres"]
optional = true
version = "0.5"

[dependencies.url]
features = ["serde"]
version = "2"

[dependencies.uuid]
features = ["serde"]
version = "0.8"
